# paradox-checksum-proxydll-patcher

./: CMakeLists.txt  LICENSE.txt  README.md
src/: dllmain.c  log.c  log.h  patcher.c  patcher.h  proxy.c  proxy.h
